[gd_scene load_steps=9 format=3 uid="uid://didpo4tbaipvr"]

[ext_resource type="Script" uid="uid://dkg2pbpksr3i" path="res://balle/balle.gd" id="1_50dfo"]
[ext_resource type="Texture2D" uid="uid://saiqp3hqofqk" path="res://assets/more_breakout_pieces.png" id="1_eobpy"]
[ext_resource type="AudioStream" uid="uid://kf7n0yoe6j8w" path="res://assets/sfx_sounds_impact11.wav" id="3_jdfn4"]
[ext_resource type="AudioStream" uid="uid://cc4yewn42x023" path="res://assets/sfx_sounds_impact12.wav" id="4_8l2cd"]
[ext_resource type="AudioStream" uid="uid://b8txvoutdxagd" path="res://assets/sfx_sounds_impact13.wav" id="5_t25cb"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_eobpy"]
friction = 0.0
bounce = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_t25cb"]
atlas = ExtResource("1_eobpy")
region = Rect2(0, 0, 1280, 800)

[sub_resource type="CircleShape2D" id="CircleShape2D_eobpy"]
radius = 9.0

[node name="Balle" type="RigidBody2D" groups=["balle"]]
physics_material_override = SubResource("PhysicsMaterial_eobpy")
gravity_scale = 0.0
lock_rotation = true
contact_monitor = true
max_contacts_reported = 1
linear_damp_mode = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_t25cb")
region_enabled = true
region_rect = Rect2(781.9593, 607.30963, 20.661194, 19.00824)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_eobpy")

[node name="balle_control" type="Node" parent="."]
script = ExtResource("1_50dfo")

[node name="SonBrique" type="AudioStreamPlayer2D" parent="balle_control"]
stream = ExtResource("4_8l2cd")
volume_db = 10.0

[node name="SonMur" type="AudioStreamPlayer2D" parent="balle_control"]
stream = ExtResource("5_t25cb")
volume_db = 10.0

[node name="SonRaquette" type="AudioStreamPlayer2D" parent="balle_control"]
stream = ExtResource("3_jdfn4")
volume_db = 8.0
